# lgsvl_simulator

./: CMakeLists.txt  README.md  package.xml
config/: sensors.yaml
data/map/autonomoustuff_parking_lot/: lanelet2_map.osm  pointcloud_map.pcd
include/lgsvl_simulator/: imu_raw_proxy.h  nmea2tfpose_core.h  odom_to_twist_core.h  points_raw_proxy.h  vehicle_cmd_proxy.h
launch/: autoware.launch
rviz/: autoware.rviz
src/: imu_raw_node.cpp  imu_raw_proxy.cpp  nmea2tfpose_core.cpp  nmea2tfpose_node.cpp  odom_to_twist_core.cpp  odom_to_twist_node.cpp  points_raw_node.cpp  points_raw_proxy.cpp  vehicle_cmd_node.cpp  vehicle_cmd_proxy.cpp
urdf/: sensors.xacro  vehicle.xacro
